# freshpaper

./: Constants.py  LICENSE  Pipfile  README.md  README.rst  bing_wallpaper.py  constants.py  freshpaper.py  pyproject.toml  setup.py  utils.py
.github/: FUNDING.yml
src/: Constants.py  DownloadUtils.py  Freshpaper.py  SystemUtils.py  WallpaperUtils.py  constants.py  freshpaper.py  wallpaperUtils.py
src/common/: logger.py
src/imagegetter/: image_getter.py
