[tool.poetry]
name = "freshpaper"
version = "1.2.2"
description = "Program to automatically set Bing's `Photo of the day` as your Desktop's wallpaper."
authors = ["Rohit Gupta <rohitgtech+git@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.rst"
homepage = "https://github.com/guptarohit/freshpaper"
repository = "https://github.com/guptarohit/freshpaper"
keywords = ["wallpaper changer", "wallpaper", "bing", "bing wallpaper", "nasa-apod"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Utilities",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6"
pillow = "^7.0"
click = "*"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[tool.poetry.scripts]
freshpaper = "freshpaper:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
